# googletest-template

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh
include/: calculator.h  log_config.h
src/: calculator.cpp  log_config.cpp  main.cpp
tests/: CMakeLists.txt  calculator_test.cpp
